fixed grid overlapping everything on small screens

--- a/src/components/styles/Grid.css
+++ b/src/components/styles/Grid.css
@@ -2,7 +2,6 @@ table {
   border-collapse: collapse;
   margin-left: 8px;
   margin-right: 5px;
-  position: fixed;
   bottom: 20px;
 }
 
